--- a/main.css
+++ b/main.css
@@ -1652,7 +1652,7 @@
     z-index: -1;
     width: 300px;
     border-radius: var(--border-radius);
-    background: url("https://i.imgur.com/dCd49s0.gif") bottom/40% no-repeat;
+    background: url("https://i.imgur.com/aY7Ij1A.gif") bottom/40% no-repeat;
   }
 
   .guilds-1SWlCJ + :nth-child(2) {
