--- a/main.css
+++ b/main.css
@@ -1633,7 +1633,7 @@
     z-index: -1;
     width: 300px;
     border-radius: var(--border-radius);
-    background: url("https://i.imgur.com/wVqHyIY.gif") bottom/50% no-repeat;
+    background: url("1gamer") bottom/50% no-repeat;
   }
 
   .guilds-1SWlCJ + :nth-child(2) {
